updated: schema and added scores API
