# openapi_gen/src/server/mod.rs
@@ -17,18 +17,21 @@ use crate::{apis, models};
 pub fn new<I, A>(api_impl: I) -> Router
 where
     I: AsRef<A> + Clone + Send + Sync + 'static,
-    A: apis::game::Game + apis::players::Players + apis::votes::Votes + 'static,
+    A: apis::games::Games + apis::players::Players + apis::scores::Scores + apis::votes::Votes + 'static,
 {
     // build our application with a route
     Router::new()
-        .route("/game",
+        .route("/games",
             get(get_games::<I, A>).post(post_games::<I, A>)
         )
-        .route("/game/:game_id",
+        .route("/games/:game_id",
             get(get_game::<I, A>).put(put_game::<I, A>)
         )
         .route("/players/:game_id",
             get(get_players::<I, A>).post(post_players::<I, A>)
+        )
+        .route("/scores/$:game_id",
+            post(post_scores::<I, A>)
         )
         .route("/votes/:game_id",
             get(get_vote::<I, A>).post(post_vote::<I, A>)
@@ -50,7 +53,7 @@ Ok((
   path_params,
 ))
 }
-/// GetGame - GET /game/{gameId}
+/// GetGame - GET /games/{gameId}
 #[tracing::instrument(skip_all)]
 async fn get_game<I, A>(
   method: Method,
@@ -61,7 +64,7 @@ async fn get_game<I, A>(
 ) -> Result<Response, StatusCode>
 where
     I: AsRef<A> + Send + Sync,
-    A: apis::game::Game,
+    A: apis::games::Games,
 {
 
       #[allow(clippy::redundant_closure)]
@@ -91,7 +94,7 @@ where
 
   let resp = match result {
                                             Ok(rsp) => match rsp {
-                                                apis::game::GetGameResponse::Status200
+                                                apis::games::GetGameResponse::Status200
                                                     (body)
                                                 => {
                                                   let mut response = response.status(200);
@@ -109,12 +112,12 @@ where
                                                       })).await.unwrap()?;
                                                   response.body(Body::from(body_content))
                                                 },
-                                                apis::game::GetGameResponse::Status400_BadRequest
+                                                apis::games::GetGameResponse::Status400_BadRequest
                                                 => {
                                                   let mut response = response.status(400);
                                                   response.body(Body::empty())
                                                 },
-                                                apis::game::GetGameResponse::Status404_NotFound
+                                                apis::games::GetGameResponse::Status404_NotFound
                                                 => {
                                                   let mut response = response.status(404);
                                                   response.body(Body::empty())
@@ -140,7 +143,7 @@ fn get_games_validation(
 Ok((
 ))
 }
-/// GetGames - GET /game
+/// GetGames - GET /games
 #[tracing::instrument(skip_all)]
 async fn get_games<I, A>(
   method: Method,
@@ -150,7 +153,7 @@ async fn get_games<I, A>(
 ) -> Result<Response, StatusCode>
 where
     I: AsRef<A> + Send + Sync,
-    A: apis::game::Game,
+    A: apis::games::Games,
 {
 
       #[allow(clippy::redundant_closure)]
@@ -177,7 +180,7 @@ where
 
   let resp = match result {
                                             Ok(rsp) => match rsp {
-                                                apis::game::GetGamesResponse::Status200
+                                                apis::games::GetGamesResponse::Status200
                                                     (body)
                                                 => {
                                                   let mut response = response.status(200);
@@ -230,7 +233,7 @@ Ok((
     body,
 ))
 }
-/// PostGames - POST /game
+/// PostGames - POST /games
 #[tracing::instrument(skip_all)]
 async fn post_games<I, A>(
   method: Method,
@@ -241,7 +244,7 @@ async fn post_games<I, A>(
 ) -> Result<Response, StatusCode>
 where
     I: AsRef<A> + Send + Sync,
-    A: apis::game::Game,
+    A: apis::games::Games,
 {
 
       #[allow(clippy::redundant_closure)]
@@ -271,7 +274,7 @@ where
 
   let resp = match result {
                                             Ok(rsp) => match rsp {
-                                                apis::game::PostGamesResponse::Status200
+                                                apis::games::PostGamesResponse::Status200
                                                     (body)
                                                 => {
                                                   let mut response = response.status(200);
@@ -328,7 +331,7 @@ Ok((
     body,
 ))
 }
-/// PutGame - PUT /game/{gameId}
+/// PutGame - PUT /games/{gameId}
 #[tracing::instrument(skip_all)]
 async fn put_game<I, A>(
   method: Method,
@@ -340,7 +343,7 @@ async fn put_game<I, A>(
 ) -> Result<Response, StatusCode>
 where
     I: AsRef<A> + Send + Sync,
-    A: apis::game::Game,
+    A: apis::games::Games,
 {
 
       #[allow(clippy::redundant_closure)]
@@ -373,7 +376,7 @@ where
 
   let resp = match result {
                                             Ok(rsp) => match rsp {
-                                                apis::game::PutGameResponse::Status200
+                                                apis::games::PutGameResponse::Status200
                                                     (body)
                                                 => {
                                                   let mut response = response.status(200);
@@ -391,12 +394,12 @@ where
                                                       })).await.unwrap()?;
                                                   response.body(Body::from(body_content))
                                                 },
-                                                apis::game::PutGameResponse::Status400_BadRequest
+                                                apis::games::PutGameResponse::Status400_BadRequest
                                                 => {
                                                   let mut response = response.status(400);
                                                   response.body(Body::empty())
                                                 },
-                                                apis::game::PutGameResponse::Status404_NotFound
+                                                apis::games::PutGameResponse::Status404_NotFound
                                                 => {
                                                   let mut response = response.status(404);
                                                   response.body(Body::empty())
@@ -603,6 +606,118 @@ where
                                                   response.body(Body::empty())
                                                 },
                                                 apis::players::PostPlayersResponse::Status404_NotFound
+                                                => {
+                                                  let mut response = response.status(404);
+                                                  response.body(Body::empty())
+                                                },
+                                            },
+                                            Err(_) => {
+                                                // Application code returned an error. This should not happen, as the implementation should
+                                                // return a valid response.
+                                                response.status(500).body(Body::empty())
+                                            },
+                                        };
+
+                                        resp.map_err(|e| { error!(error = ?e); StatusCode::INTERNAL_SERVER_ERROR })
+}
+
+    #[derive(validator::Validate)]
+    #[allow(dead_code)]
+    struct PostScoresBodyValidator<'a> {
+            #[validate(nested)]
+          body: &'a models::PostScoresRequest,
+    }
+
+
+#[tracing::instrument(skip_all)]
+fn post_scores_validation(
+  path_params: models::PostScoresPathParams,
+        body: Option<models::PostScoresRequest>,
+) -> std::result::Result<(
+  models::PostScoresPathParams,
+        Option<models::PostScoresRequest>,
+), ValidationErrors>
+{
+  path_params.validate()?;
+            if let Some(body) = &body {
+              let b = PostScoresBodyValidator { body };
+              b.validate()?;
+            }
+
+Ok((
+  path_params,
+    body,
+))
+}
+/// PostScores - POST /scores/${gameId}
+#[tracing::instrument(skip_all)]
+async fn post_scores<I, A>(
+  method: Method,
+  host: Host,
+  cookies: CookieJar,
+  Path(path_params): Path<models::PostScoresPathParams>,
+ State(api_impl): State<I>,
+          Json(body): Json<Option<models::PostScoresRequest>>,
+) -> Result<Response, StatusCode>
+where
+    I: AsRef<A> + Send + Sync,
+    A: apis::scores::Scores,
+{
+
+      #[allow(clippy::redundant_closure)]
+      let validation = tokio::task::spawn_blocking(move ||
+    post_scores_validation(
+        path_params,
+          body,
+    )
+  ).await.unwrap();
+
+  let Ok((
+    path_params,
+      body,
+  )) = validation else {
+    return Response::builder()
+            .status(StatusCode::BAD_REQUEST)
+            .body(Body::from(validation.unwrap_err().to_string()))
+            .map_err(|_| StatusCode::BAD_REQUEST);
+  };
+
+  let result = api_impl.as_ref().post_scores(
+      method,
+      host,
+      cookies,
+        path_params,
+              body,
+  ).await;
+
+  let mut response = Response::builder();
+
+  let resp = match result {
+                                            Ok(rsp) => match rsp {
+                                                apis::scores::PostScoresResponse::Status200
+                                                    (body)
+                                                => {
+                                                  let mut response = response.status(200);
+                                                  {
+                                                    let mut response_headers = response.headers_mut().unwrap();
+                                                    response_headers.insert(
+                                                        CONTENT_TYPE,
+                                                        HeaderValue::from_str("application/json").map_err(|e| { error!(error = ?e); StatusCode::INTERNAL_SERVER_ERROR })?);
+                                                  }
+
+                                                  let body_content =  tokio::task::spawn_blocking(move ||
+                                                      serde_json::to_vec(&body).map_err(|e| {
+                                                        error!(error = ?e);
+                                                        StatusCode::INTERNAL_SERVER_ERROR
+                                                      })).await.unwrap()?;
+                                                  response.body(Body::from(body_content))
+                                                },
+                                                apis::scores::PostScoresResponse::Status400_BadRequest
+                                                => {
+                                                  let mut response = response.status(400);
+                                                  response.body(Body::empty())
+                                                },
+                                                apis::scores::PostScoresResponse::Status404_NotFound
                                                 => {
                                                   let mut response = response.status(404);
                                                   response.body(Body::empty())
