# schema/api.yml
@@ -15,15 +15,16 @@ servers:
   - url: "http://localhost:31000"
     description: dev
 tags:
-  - name: game
+  - name: games
   - name: players
   - name: votes
+  - name: scores
 paths:
-  /game:
+  /games:
     get:
       operationId: getGames
       tags:
-        - game
+        - games
       summary: ゲーム全取得API
       description: 作成されているゲームを全て取得する
       responses:
@@ -32,7 +33,7 @@ paths:
     post:
       operationId: postGames
       tags:
-        - game
+        - games
       summary: ゲーム作成API
       description: 新しいゲームを作成する
       requestBody:
@@ -40,11 +41,11 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/postGamesResponse'
-  '/game/{gameId}':
+  '/games/{gameId}':
     get:
       operationId: getGame
       tags:
-        - game
+        - games
       summary: ゲーム取得API
       description: 対象のゲームを取得する
       parameters:
@@ -65,7 +66,7 @@ paths:
     put:
       operationId: putGame
       tags:
-        - game
+        - games
       summary: ゲームデータ変更API
       description: 対象のゲームデータを変更する
       parameters:
@@ -126,6 +127,30 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/postVoteResponse'
+        '400':
+          description: Bad Request
+        '404':
+          description: Not Found
+  '/scores/${gameId}':
+    post:
+      operationId: postScores
+      tags:
+        - scores
+      summary: スコア追加API
+      description: ゲーム中に変更されたコードのスコアを計算します
+      parameters:
+        - in: path
+          name: gameId
+          required: true
+          schema:
+            type: integer
+            format: int64
+          description: 対象のゲームのID
+      requestBody:
+        $ref: '#/components/requestBodies/postScoreRequest'
+      responses:
+        '200':
+          $ref: '#/components/responses/postScoreResponse'
         '400':
           description: Bad Request
         '404':
@@ -212,13 +237,6 @@ components:
           type: integer
           format: int64
           description: プレイヤーが参加しているゲームのID
-        score:
-          type: number
-          format: double
-          description: 現在の実装の類似度
-        impl_img_url:
-          type: string
-          description: 現在の実装のレンダリング結果画像のURL
     Vote:
       type: object
       properties:
@@ -234,6 +252,28 @@ components:
           type: integer
           format: int64
           description: 投票先のプレイヤーのID
+    Score:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          description: スコアの一意な識別子
+        player_id:
+          type: integer
+          format: int64
+          description: スコアを持つプレイヤーのID
+        game_id:
+          type: integer
+          format: int64
+          description: スコアを持つゲームのID
+        score:
+          type: number
+          format: double
+          description: スコア
+        code:
+          type: string
+          description: ソースコード
   requestBodies:
     postGamesRequest:
       content:
@@ -251,8 +291,6 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/Game'
-            required:
-              - id
     postVoteRequest:
       content:
         application/json:
@@ -276,6 +314,23 @@ components:
                 description: プレイヤー名
             required:
               - name
+    postScoreRequest:
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              code:
+                type: string
+                description: ソースコード
+              player_id:
+                type: integer
+                format: int64
+                description: プレイ中のプレイヤーのID
+            required:
+              - code
+              - game_id
+              - player_id
   responses:
     getGamesResponse:
       description: 作成されたゲームを全て返します
@@ -338,3 +393,9 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/Player'
+    postScoreResponse:
+      description: 追加したスコアを返します
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Score'
